--- a/main.css
+++ b/main.css
@@ -7,73 +7,55 @@ header{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-/* Navbar */
+/* Navbar*/
 
 .navbar{
     display: flex;
     justify-content: space-between;
-}
-
-.navbar a{
     align-items: center;
 }
 
-/* nav items */
-
-.nav-items img{
+.navbar img {
     height: 100px;
     width: 150px;
 }
 
-.nav-items{
-    align-content: center;
-}
-
-.nav-items a{
-    text-decoration: none;
-    padding: 12px 10px;
+.items{
+    margin-right: 35rem;
     font-size: small;
-    color: gray;
 }
 
-.nav-items a i{
-    margin-left: 7px;
+.items a{
+    padding: 8px 6px;
+    text-decoration: none;
+    color: grey;
 }
 
-.nav-items a:hover{
+.items a:hover{
     color: black;
     text-decoration: underline;
     transition: ease-in-out 0.1s;
 }
 
-/* search and cart */
-
-.nav-items-right{
-    margin-right: 1.5rem;
+.items i{
+    margin-left : 5px;
 }
 
-.nav-items-right a{
-    color: black;
-    text-decoration: none;
-    font-size: small;
+.icons{
+    display: flex;
+    justify-content: space-between;
 }
 
-.nav-items-right a{
+.icons a{
     padding: 8px 6px;
+    font-size: medium;
+    text-decoration: none;
     text-align: center;
+    color: black;
 }
 
-.nav-items-right i{
-    justify-self: center;
-    font-size: larger;
-}
 
-/* slider */
 
-.carousel-item img{
-    height: 142px;
-    width: 142px;
-}
 
 /* container */
 
@@ -84,8 +66,3 @@ header{
 
 /* Incense */
 
-.wrapper{
-    display: flex;
-    justify-content: space-between;
-    align-items: center; 
-}
